--- a/.github/workflows/master_accumax.yml
+++ b/.github/workflows/master_accumax.yml
@@ -23,8 +23,8 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
-          npm run build --if-present
+          npm install --legacy-peer-deps
+          npm run build-prod --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
