--- a/.github/workflows/master_accumax.yml
+++ b/.github/workflows/master_accumax.yml
@@ -58,4 +58,6 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'accumax'
+          slot-name: 'Production'
           package: ./dist
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
