--- a/.github/workflows/master_accumax.yml
+++ b/.github/workflows/master_accumax.yml
@@ -57,7 +57,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'accumax'
-          slot-name: 'Production'
+          app-name: 'accumaxx'
           package: ./dist
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
