--- a/.github/workflows/master_accumax.yml
+++ b/.github/workflows/master_accumax.yml
@@ -18,19 +18,11 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: Install dependencies and build
-        run: |
-          npm install --legacy-peer-deps
-          npm run build --if-present
+      - name: Install dependencies
+        run: npm install --legacy-peer-deps
 
-      - name: Zip artifact for deployment
-        run: zip -r release.zip dist
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: node-app
-          path: release.zip
+      - name: Build the Angular app
+        run: npm run build --if-present
 
   deploy:
     runs-on: ubuntu-latest
@@ -42,18 +34,10 @@ jobs:
       id-token: write
 
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip dist
-
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'accumax'
-          package: './dist'
+          package: './dist'  # Path to the dist directory
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
