--- a/.github/workflows/master_accumax.yml
+++ b/.github/workflows/master_accumax.yml
@@ -38,6 +38,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'accumax'
-          package: './dist'  # Path to the dist directory
+          app-name: 'accumaxx'
+          package: './dist'
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
