--- a/.github/workflows/master_accumax.yml
+++ b/.github/workflows/master_accumax.yml
@@ -24,6 +24,15 @@ jobs:
       - name: Build the Angular app
         run: npm run build --if-present
 
+      - name: Zip artifact for deployment
+        run: zip -r release.zip dist
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: node-app
+          path: release.zip
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -34,10 +43,18 @@ jobs:
       id-token: write
 
     steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: node-app
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'accumaxx'
-          package: './dist'
+          package: './dist'  # Path to the dist directory
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
