--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "scripts": {
-    "ng": "ng",
     "ng": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "build-prod": "ng build --configuration=production --output-hashing=all"
   },
   "dependencies": {
