--- a/.github/workflows/master_accumax.yml
+++ b/.github/workflows/master_accumax.yml
@@ -56,5 +56,5 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'accumaxx'
-          package: './dist'  # Path to the dist directory
+          package: './dist'
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
