--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,16 @@
 {
-    "appService.defaultWebAppToDeploy": "undefined/subscriptions/7a43e6af-e487-43d4-b4b4-824193cb0f04/resourceGroups/demoAccumax/providers/Microsoft.Web/sites/demoAccumax",
-    "appService.deploySubpath": "."
+    "appService.defaultWebAppToDeploy": "undefined/subscriptions/7a43e6af-e487-43d4-b4b4-824193cb0f04/resourceGroups/accumax/providers/Microsoft.Web/sites/accumax",
+    "appService.deploySubpath": "dist/accumax/**",
+    "appService.zipIgnorePattern": [
+        "!dist/accumax/**",
+        "node_modules/**",
+        "src/**",
+        ".vscode/**",
+        ".git/**",
+        "README.md",
+        "package.json",
+        "package-lock.json",
+        "node_modules{,/**}",
+        ".vscode{,/**}"
+    ]
 }
