--- a/.github/workflows/master_accumax.yml
+++ b/.github/workflows/master_accumax.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Angular app to Azure Web App - accumaxx
+name: Build and deploy Angular app to Azure Web App - accumax
 
 on:
   push:
@@ -55,6 +55,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'accumaxx'
-          package: './dist/accumax/**'
+          app-name: 'accumax'
+          package: './dist/**'
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
