--- a/.github/workflows/master_accumax.yml
+++ b/.github/workflows/master_accumax.yml
@@ -51,5 +51,5 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: 'accumax'
-          package: 'dist/accumax/browser'
+          package: './dist/**'
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
