--- a/.github/workflows/master_accumax.yml
+++ b/.github/workflows/master_accumax.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install --force
 
       - name: Build Angular project
-        run: ng build --configuration production
+        run: npm run build-prod
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
