--- a/.github/workflows/master_accumax.yml
+++ b/.github/workflows/master_accumax.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: dist/accumax
+          path: dist/accumax/browser
 
   deploy:
     runs-on: windows-latest
