--- a/.github/workflows/master_accumax.yml
+++ b/.github/workflows/master_accumax.yml
@@ -50,6 +50,7 @@ jobs:
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
+        enableDeleteFiles: true
         with:
           app-name: 'accumax'
           package: 'dist/accumax'
